Nav1 menu wrapping fix

--- a/web/css/menu.css
+++ b/web/css/menu.css
@@ -17,6 +17,8 @@
     text-align:justify;
     font-family: Century Gothic;
     margin-bottom: 0;
+    display: inline-block !important;
+    white-space: nowrap;
 } 
 
 .nav1 a{
